--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -25,6 +25,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
+        android:layout_gravity="center"
+
         >
         <Button
             android:id="@+id/off_plus"
@@ -36,13 +38,12 @@
 
         <TextView
             android:id="@+id/off_text"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="25"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:layout_gravity="center"
-
             android:layout_weight="1"
             />
         <Button
@@ -59,27 +60,62 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+
         >
+        <Button
+            android:id="@+id/on_plus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:layout_weight="1"
+            />
 
-
-    </LinearLayout>
+        <TextView
+            android:id="@+id/on_text"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="25"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            />
+        <Button
+            android:id="@+id/on_minus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="-"
+            android:layout_weight="1"
+            />    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_gravity="center"
+        android:orientation="vertical"
         >
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        >
-
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
+        <Button
+            android:id="@+id/start_stop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Start"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
     </LinearLayout>
 
     <!--
