--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     android:background="#00e676"
     android:orientation="horizontal"
+    android:clipChildren="false"
     android:padding="@dimen/widget_margin">
 
 
@@ -100,10 +101,11 @@
             />
 
         <ImageButton
+            android:id="@+id/image_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/c_1"
+            android:src="@drawable/orange_button"
             android:background="@android:color/transparent"
             />
 
