--- a/app/src/main/res/drawable/round4.xml
+++ b/app/src/main/res/drawable/round4.xml
@@ -1,20 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <rotate
-            android:fromDegrees="45"
-            android:pivotX="0%"
-            android:pivotY="100%"
-            android:toDegrees="45">
-            <shape android:shape="rectangle">
-                <stroke
-                    android:width="10dp"
-                    android:color="@color/colorAccent" />
-
-                <solid android:color="@color/colorPrimary" />
-            </shape>
-        </rotate>
-    </item>
-
-</layer-list>
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="180"
+    android:toDegrees="0"
+    android:drawable="@drawable/ic_arrow_9696_042">
+</rotate>
