--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00e676"
+    android:background="#09b83e"
     android:orientation="horizontal"
     android:clipChildren="false"
     android:padding="@dimen/widget_margin">
@@ -24,18 +24,18 @@
             android:text="OFF"
             android:textStyle="bold"
             android:layout_weight="1"
-            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:gravity="center|right"
+            android:textSize="25dp"
             />
 
-        <TextView
-            android:id="@+id/off_text"
-            android:gravity="center"
+        <ImageButton
+            android:id="@+id/minus_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="25"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
             android:layout_weight="1"
+            android:src="@drawable/round4"
+            android:background="@android:color/transparent"
             />
         <Button
             android:id="@+id/off_minus"
@@ -43,6 +43,7 @@
             android:layout_height="match_parent"
             android:text="-"
             android:layout_weight="1"
+            android:visibility="invisible"
             />
 
     </LinearLayout>
@@ -55,11 +56,26 @@
         android:layout_gravity="center"
 
         >
-        <Button
-            android:id="@+id/on_plus"
+        <TextView
+            android:id="@+id/deneme"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="+"
+            android:text="25"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            />
+        <TextView
+            android:id="@+id/off_text"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="25"
+            android:textSize="25dp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
             android:layout_weight="1"
             />
 
@@ -71,14 +87,17 @@
             android:text="25"
             android:textColor="@android:color/white"
             android:textStyle="bold"
+            android:textSize="25dp"
             android:layout_weight="1"
             />
-        <Button
-            android:id="@+id/on_minus"
+
+        <ImageButton
+            android:id="@+id/start_stop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="-"
             android:layout_weight="1"
+            android:src="@drawable/round4"
+            android:background="@android:color/transparent"
             />
     </LinearLayout>
 
@@ -96,8 +115,10 @@
             android:layout_height="match_parent"
             android:text="ON"
             android:textStyle="bold"
+            android:textColor="@android:color/white"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|left"
+            android:textSize="25dp"
             />
 
         <ImageButton
@@ -105,7 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/orange_button"
+            android:src="@drawable/ic_arrow_9696_042"
             android:background="@android:color/transparent"
             />
 
