--- a/app/src/main/res/layout/lastproject.xml
+++ b/app/src/main/res/layout/lastproject.xml
@@ -1,13 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundshape"
+    android:background="#09b83e"
     android:orientation="horizontal"
     android:clipChildren="false"
     android:padding="@dimen/widget_margin">
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
