--- a/app/src/main/res/xml/main_widget_info.xml
+++ b/app/src/main/res/xml/main_widget_info.xml
@@ -3,8 +3,8 @@
     android:initialKeyguardLayout="@layout/main_widget"
     android:initialLayout="@layout/main_widget"
     android:minHeight="40dp"
-    android:minWidth="40dp"
+    android:minWidth="250dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
