Arayüz tamamlandı servis eklenip kontrolleri yapılacak, Shared Pref kullanıldı

--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -47,7 +47,7 @@
                 android:gravity="bottom|center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="25"
+                android:text="1"
                 android:textSize="25dp"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
@@ -61,7 +61,7 @@
             android:gravity="center|top"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="25"
+            android:text="1"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:textSize="25dp"
@@ -106,6 +106,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="OFF"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:textColor="@android:color/white"
             android:background="@android:color/transparent"
             />
