--- a/app/src/main/res/drawable/button_transparentup_inv.xml
+++ b/app/src/main/res/drawable/button_transparentup_inv.xml
@@ -7,13 +7,14 @@
         android:bottom="5dp"
         android:left="5dp"
         >
-        <shape android:shape="oval">
-            <solid android:color="#263238"/>
-            <corners android:radius="0dp"/>
+        <shape android:shape="rectangle">
+            <solid android:color="#FFB300"/>
+            <corners android:radius="4dp"/>
             <padding android:left="1dp"
                 android:top="0dp"
                 android:right="0dp"
                 android:bottom="0dp" />
+
         </shape>
     </item>
     <item android:bottom="0dp"
