Widget üzerinden bir activity dialog olarak acilmakta ve kapatıldığında arka planda çalışmamaktadır.

--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -1,76 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    >
-
-
-    <LinearLayout
-        android:id="@+id/headerLinear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <ImageView
-            android:id="@+id/labelImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/button_custom_selector_down"
-            android:layout_gravity="left"
-            />
-        <TextView
-            android:id="@+id/labelName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Merhaba Dünya"
-            android:layout_gravity="center"
-            android:textSize="30px"
-            android:textStyle="bold"
-            />
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/pickerLinear"
-        android:layout_below="@+id/headerLinear"
-        android:layout_centerInParent="true"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Time"
-            android:id="@+id/textTime"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            />
-
-        <NumberPicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/numberPickerTime"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
     <Button
-        android:id="@+id/setTimeButton"
+        android:id="@+id/cancel_btn_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="SET"
-        android:layout_below="@+id/pickerLinear"
-        android:layout_centerInParent="true"
-        />
+        android:layout_alignBaseline="@+id/ok_btn_id"
+        android:layout_alignBottom="@+id/ok_btn_id"
+        android:layout_marginLeft="25dp"
+        android:layout_toRightOf="@+id/ok_btn_id"
+        android:text="Cancel" />
 
+    <Button
+        android:id="@+id/ok_btn_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="92dp"
+        android:text="OK" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="37dp"
+        android:text="This is Activity Dialog"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
